# jaundice-assistant-backend

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
core/: settings.py  urls.py
recommender/: __init__.py  readme.md
recommender/jd_models/: __init__.py  treatment.py
recommender/jd_recommend/: __init__.py  follow_up_after_off_photo.py  follow_up_never_on_photo.py  manage_tcb.py  manage_tsb_over_photo.py  manage_tsb_under_photo.py  msg_generation.py  threshold_computers.py
recommender/jd_utils/: __init__.py
resources/exchange_at_risk/: GA35.csv  GA36.csv  GA37.csv  GA38.csv
resources/exchange_no_risk/: GA35.csv  GA36.csv  GA37.csv  GA38.csv
resources/exchange_threshold_no_neuro_risk/: GA35_no_risk_exchange_thr.csv  GA36_no_risk_exchange_thr.csv  GA37_no_risk_exchange_thr.csv  GA38_or_more_no_risk_exchange_thr.csv
resources/exchange_threshold_plus_neuro_risk/: GA35_plus_risk_exchange_thr.csv  GA36_plus_risk_exchange_thr.csv  GA37_plus_risk_exchange_thr.csv  GA38_or_more_plus_risk_exchange_thr.csv
resources/photo_at_risk/: GA35.csv  GA36.csv  GA37.csv  GA38.csv
resources/photo_no_risk/: GA35.csv  GA36.csv  GA37.csv  GA38.csv  GA39.csv  GA40.csv
resources/photo_threshold_no_neuro_risk/: GA35_no_risk_photo_thr.csv  GA36_no_risk_photo_thr.csv  GA37_no_risk_photo_thr.csv  GA38_no_risk_photo_thr.csv  GA39_no_risk_photo_thr.csv  GA40_or_more_no_risk_photo_thr.csv
resources/photo_threshold_plus_neuro_risk/: GA35_plus_risk_photo_thr.csv  GA36_plus_risk_photo_thr.csv  GA37_plus_risk_photo_thr.csv  GA38_or_more_plus_risk_photo_thr.csv
service/: forms.py  urls.py  views.py
src/: main.py  readme.md
src/jd_models/: __init__.py  patient.py  treatment.py
src/jd_recommend/: birth_admission_screening.py  follow_up.py  follow_up_after_off_photo.py  follow_up_never_on_photo.py  manage_tcb.py  manage_tsb_over_photo.py  manage_tsb_under_photo.py  msg_generation.py  no_phototherapy_infants_follow_up.py  recommend_utils.py  threshold_computers.py  tsb_and_phototherapy.py
src/jd_utils/: __init__.py  const.py
src/routes/: routes.py
src/templates/: main.html
static/css/: form.css  loginStyle.css  navbarStyle.css  style.css
static/js/: index.js
templates/: index.html
templates/views/: ANsearch.html  (+4 more)
(+10 files in other folders)
