[tool.poetry]
name = "jaundice-assistant-service"
version = "0.1.0"
description = "Web application to assist in managing jaundice cases."
authors = ["Nawat Ngerncham <n.ngerncham@gmail.com>", "Chiraphat Lua <chirap.lua@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pyyaml = "^6.0.1"
pandas = "^2.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
coverage = "^7.3.1"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"