[tool.poetry]
name = "jaundice-assistant-service"
version = "0.1.0"
description = "Web application to assist in managing jaundice cases."
authors = ["Nawat Ngerncham <n.ngerncham@gmail.com>", "Chiraphat Lua <chirap.lua@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.5"
pyyaml = "6.0.1"
pandas = "^2.1.0"
asgiref = "3.7.2"
black = "23.9.1"
click = "8.1.7"
colorama = "0.4.6"
coverage = "7.3.1"
django-debug-toolbar = "4.2.0"
flake8 = "6.1.0"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
packaging = "23.1"
pathspec = "0.11.2"
platformdirs = "3.10.0"
pycodestyle = "2.11.0"
pyflakes = "3.1.0"
sqlparse = "0.4.4"
tomli = "2.0.1"
typing-extensions = "4.7.1"
tzdata = "2023.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
coverage = "^7.3.1"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
