[tool.poetry]
name = "jaundice-assistant-service"
version = "0.1.0"
description = "Web application to assist in managing jaundice cases."
authors = ["Nawat Ngerncham <n.ngerncham@gmail.com>", "Chiraphat Lua <chirap.lua@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pyyaml = "6.0.1"
pandas = "^2.1.0"
platformdirs = "^4.2.1"
tzdata = "^2024.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.1"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
